--- a/index.html
+++ b/index.html
@@ -66,23 +66,23 @@
       <div class="container grid">
         <header>
           <h2 class="title">Serviços</h2>
-          <p>Com mais de 10 anos no mercado, o <strong>Beautysalon</strong> já conquistou clientes de inúmeros países com seus tratamentos exclusivos e totalmente naturais.</p>
+          <p class="subtitle">Com mais de 10 anos no mercado, o <strong>Beautysalon</strong> já conquistou clientes de inúmeros países com seus tratamentos exclusivos e totalmente naturais.</p>
         </header>
         <div class="cards grid">
           <div class="card">
             <i class="icon-woman-hair"></i>
             <h3 class="title">Terapia capilar</h3>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corrupti quisquam libero corporis molestias ad, odit necessitatibus reiciendis nisi dicta repellendus fuga, maxime eum cumque autem, laborum aliquam assumenda quidem quaerat!</p>
+            <p>Terapia completa para couro cabeludo e fios, protegendo todos os tipos de cabelos, inclusive os longos e finos.</p>
           </div>
           <div class="card">
             <i class="icon-trim"></i>
             <h3 class="title">Cortes</h3>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis culpa saepe quaerat delectus esse itaque? Vero non nemo rem perferendis dicta amet illo! Minima non quasi ab alias vero atque.</p>
+            <p>A nossa equipe é repleta de profissionais renomados, famosos por lançarem tendências com cortes diferenciados e clássicos.</p>
           </div>
           <div class="card">
             <i class="icon-cosmetic"></i>
             <h3 class="title">Tratamentos</h3>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum laudantium dolores reiciendis, quisquam, consequatur ex voluptate dolorem eveniet adipisci veritatis harum quibusdam quia at ad rerum, magnam ut reprehenderit nostrum.</p>
+            <p>O beautysalon conta com diversos tratamentos naturais e totalmente veganos, para qualquer tipo de cabelo.</p>
           </div>
         </div>
       </div>
@@ -162,7 +162,27 @@
       </div>
     </section>
 
+    <div class="divider-1"></div>
+
   </main>
+
+  <footer class="section">
+    <div class="container grid">
+      <div class="brand">
+        <a class="logo logo-alt" href="#home">beauty<span>salon</span>.</a>
+        <p>©2021 Beautysalon.</p>
+        <p>Todos os direitos reservados.</p>
+      </div>
+
+      <div class="social grid">
+        <a href="https://instagram.com/"><i class="icon-instagram"></i></a>
+        <a href="https://facebook.com/"><i class="icon-facebook"></i></a>
+        <a href="https://youtube.com/"><i class="icon-youtube"></i></a>
+      </div>
+    </div>
+  </footer>
+  
+  <a class="back-to-top" href="#home"><i class="icon-arrow-up"></i></a>
 
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
   <script src="https://unpkg.com/scrollreveal"></script>
